Game setting update

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -275,6 +275,9 @@ LightComponent="\"Object\" "
 SkyAtmosphereComponent="\"Object\" "
 VolumetricCloudComponent="\"Object\" "
 ExponentialHeightFogComponent="\"Object\" "
+StaticMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -617,9 +620,34 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+GM_PlayMode_C.Tick=True
+GM_PlayMode_C.Classes=True
+GM_PlayMode_C.Game=True
+GM_PlayMode_C.GameMode=True
+GM_PlayMode_C.Physics=True
+GM_PlayMode_C.Events=True
+GM_MenuMode_C.Tick=True
+GM_MenuMode_C.Classes=True
+GM_MenuMode_C.Game=True
+GM_MenuMode_C.GameMode=True
+GM_MenuMode_C.Physics=True
+GM_MenuMode_C.Events=True
+BP_PlayerController_C.PlayerController=True
+BP_PlayerController_C.Tick=True
+BP_PlayerController_C.Cheat Manager=True
+BP_PlayerController_C.MouseInterface=True
+BP_PlayerController_C.Game=True
+BP_PlayerController_C.Input=True
+BP_PlayerController_C.WorldPartition=True
+BP_PlayerController_C.Controller=True
+BP_PlayerController_C.Replication=True
+BP_PlayerController_C.Actor=True
+BP_PlayerController_C.HLOD=True
+BP_PlayerController_C.Physics=True
+BP_PlayerController_C.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=-1473.000 Y=139.000
@@ -1693,8 +1721,11 @@ MRUItem0=/Game/DragonWord/MAP/LevelOne
 MRUItem1=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/DragonWord/MAP/LevelOne
-MRUItem1=/Game/DragonWord/MAP/TestMap
+MRUItem0=/Game/DragonWord/Setting/BP_PlayerController
+MRUItem1=/Game/DragonWord/Setting/GM_MenuMode
+MRUItem2=/Game/DragonWord/Setting/GM_PlayMode
+MRUItem3=/Game/DragonWord/MAP/LevelOne
+MRUItem4=/Game/DragonWord/MAP/TestMap
 
 [LandscapeEdit]
 PaintToolStrength=0.300000012
@@ -1720,4 +1751,53 @@ ShowUnusedLayers=True
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
 GameMapsSettings=True
+
+[AssetEditorToolkitTabLocation]
+/Game/DragonWord/Setting/GM_MenuMode.GM_MenuMode=0
+/Game/DragonWord/Setting/GM_PlayMode.GM_PlayMode=0
+/Game/DragonWord/Setting/BP_PlayerController.BP_PlayerController=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bEnableInputTriggerSupportWarnings=False
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=True
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
