--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -117,12 +117,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=Windows@PIMKAMONW
 LastExecutedLaunchName=PIMKAMONW
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=640,Y=156)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -157,21 +158,21 @@ WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMo
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 InputMappingContext=InputMappingContext.Mappings.ActionMappings./Game/DragonWord/InputSystem/IA_Shift.IA_Shift,InputMappingContext.Mappings.ActionMappings./Game/DragonWord/InputSystem/IA_Attack.IA_Attack,InputMappingContext.Mappings.ActionMappings./Game/DragonWord/InputSystem/IA_Jump.IA_Jump,InputMappingContext.Mappings.ActionMappings./Game/DragonWord/InputSystem/IA_Mouse.IA_Mouse,
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,
 BP_WizardPlayer_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,
 EdGraphNode=PropertyWrapper.DefaultValueCategory.ComboStruct,
 None=======
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
 NiagaraComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,
 UserDefinedStruct=
 STRUCT_Vocab=
 STRUCT_VocabCategory=
-SYS_PlayerStat_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
+SYS_PlayerStat_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
-EdGraph=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
+EdGraph=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,
 K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.ComboStruct,
 TextBlock=PropertyWrapper.DefaultValueCategory.ComboStruct,
 Ability_1_C=PropertyWrapper.DefaultValueCategory.ComboStruct,
@@ -179,13 +180,13 @@ QueryStat=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.Defau
 Ability_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
 K2Node_SetFieldsInStruct=K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
-K2Node=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
+K2Node=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,
 HUD_GamePlay_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,
 K2Node_FormatText=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,
-EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,
+EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,
 BP_EnemyBase_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
 BPC_Enemy_Health_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
 K2Node_Timeline=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
@@ -193,6 +194,10 @@ ABP_WizardPlayer_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrap
 AnimGraphNode_BlendSpacePlayer=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
 GM_PlayMode_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,
+CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,
+WB_BloodFx_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,
+Landscape=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
+SceneComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
 
 [EditorStartup]
 LastLevel=/Game/DragonWord/MAP/LevelOne
@@ -404,7 +409,7 @@ EdGraphNode_Comment="\"Object\" "
 BoxComponent="\"Object\" "
 SphereComponent="\"Object\" "
 WB_DamageNumber_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
-WB_BloodFx_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+WB_BloodFx_C="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
 Overlay="\"Object\" "
 HorizontalBox="\"Object\" "
@@ -1532,12 +1537,14 @@ AnimGraphNode_BlendSpacePlayer.Tag=True
 AnimGraphNode_BlendSpacePlayer.Settings=True
 K2Node_InputDebugKey.Input=True
 K2Node_InputDebugKey.Modifier=True
+WB_BloodFx_C.Layout=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/DragonWord/Player/BP_WizardPlayer.BP_WizardPlayer
 OpenAssetsAtExit=/Game/DragonWord/Player/Components/SYS_PlayerStat.SYS_PlayerStat
 OpenAssetsAtExit=/Game/DragonWord/FX/DashFX.DashFX
+OpenAssetsAtExit=/Game/DragonWord/HUD/HUD_GamePlay.HUD_GamePlay
 
 [RootWindow]
 ScreenPosition=X=853.000 Y=161.000
@@ -2664,25 +2671,25 @@ MRUItem0=/Game/DragonWord/MAP/LevelOne
 MRUItem1=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/DragonWord/FX/DashFX
-MRUItem1=/Game/BattleWizardPolyart/Animations/Idle01Anim
-MRUItem2=/Game/DragonWord/Player/Animation/BS_Movement
-MRUItem3=/Game/DragonWord/Player/Animation/ABP_WizardPlayer
-MRUItem4=/Game/DragonWord/Player/Components/SYS_PlayerStat
-MRUItem5=/Game/DragonWord/Enemies/BP_EnemyBase
-MRUItem6=/Game/DragonWord/Player/BP_WizardPlayer
-MRUItem7=/Game/DragonWord/Enemies/Component/BPC_Attacks
-MRUItem8=/Game/DragonWord/Enemies/Component/BPC_Enemy_Health
-MRUItem9=/Game/DragonWord/Enemies/Component/STRUCT_EnemyWave
-MRUItem10=/Game/DragonWord/Enemies/Component/STRUCT_AttackAnim
-MRUItem11=/Game/DragonWord/Enemies/HUD/WB_DamageNumberEnemy
-MRUItem12=/Game/DragonWord/HUD/WB_DamageNumberEnemy
-MRUItem13=/Game/DragonWord/Enemies/HUD/HUD_EnemiesDamage
-MRUItem14=/Game/DragonWord/HUD/WB_DamageNumber
-MRUItem15=/Game/DragonWord/Enemies/HUD/HUD_EnemiesHealth
-MRUItem16=/Game/DragonWord/HUD/WB_BloodFx
-MRUItem17=/Game/DragonWord/HUD/HUD_GameOver
-MRUItem18=/Game/DragonWord/HUD/HUD_GamePlay
+MRUItem0=/Game/DragonWord/HUD/WB_BloodFx
+MRUItem1=/Game/DragonWord/HUD/HUD_GamePlay
+MRUItem2=/Game/DragonWord/FX/DashFX
+MRUItem3=/Game/BattleWizardPolyart/Animations/Idle01Anim
+MRUItem4=/Game/DragonWord/Player/Animation/BS_Movement
+MRUItem5=/Game/DragonWord/Player/Animation/ABP_WizardPlayer
+MRUItem6=/Game/DragonWord/Player/Components/SYS_PlayerStat
+MRUItem7=/Game/DragonWord/Enemies/BP_EnemyBase
+MRUItem8=/Game/DragonWord/Player/BP_WizardPlayer
+MRUItem9=/Game/DragonWord/Enemies/Component/BPC_Attacks
+MRUItem10=/Game/DragonWord/Enemies/Component/BPC_Enemy_Health
+MRUItem11=/Game/DragonWord/Enemies/Component/STRUCT_EnemyWave
+MRUItem12=/Game/DragonWord/Enemies/Component/STRUCT_AttackAnim
+MRUItem13=/Game/DragonWord/Enemies/HUD/WB_DamageNumberEnemy
+MRUItem14=/Game/DragonWord/HUD/WB_DamageNumberEnemy
+MRUItem15=/Game/DragonWord/Enemies/HUD/HUD_EnemiesDamage
+MRUItem16=/Game/DragonWord/HUD/WB_DamageNumber
+MRUItem17=/Game/DragonWord/Enemies/HUD/HUD_EnemiesHealth
+MRUItem18=/Game/DragonWord/HUD/HUD_GameOver
 MRUItem19=/Game/DragonWord/Player/Ability_1
 
 [LandscapeEdit]
