Added the Wheel-Traps

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2656,6 +2656,9 @@ Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/vehicles/SM_PROP_cart_03.SM_PROP_cart_03;
+RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/vehicles/SM_PROP_cart_02.SM_PROP_cart_02;
+RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/vehicles/SM_PROP_cart_wheel_big.SM_PROP_cart_wheel_big;
 RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/vehicles/SM_PROP_cart_wheel_big_R_02.SM_PROP_cart_wheel_big_R_02;
 RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/vehicles/SM_PROP_cart_wheel_small_R.SM_PROP_cart_wheel_small_R;
 RecentlyPlaced=/Game/Fantastic_Village_Pack/blueprints/props/BP_PROP_fence_gate.BP_PROP_fence_gate;
@@ -2673,9 +2676,6 @@ RecentlyPlaced=/Game/Fantastic_Village_Pack/blueprints/props/BP_PROP_wall_wood_g
 RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/construction/SM_PROP_watchtower_wood_02_small.SM_PROP_watchtower_wood_02_small;
 RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/construction/SM_PROP_bridge_stone_01.SM_PROP_bridge_stone_01;
 RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/construction/SM_PROP_fence_v04_03.SM_PROP_fence_v04_03;
-RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/construction/SM_PROP_bridge_wood_04.SM_PROP_bridge_wood_04;
-RecentlyPlaced=/Script/Landscape.LandscapeMeshProxyActor;
-RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/buildings/SM_BLD_base_v01_01.SM_BLD_base_v01_01;
 None=======
 GameplayTagsSettings=True
 
