--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -197,7 +197,7 @@ GM_PlayMode_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.D
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,
 WB_BloodFx_C=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Combo,
 Landscape=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
-SceneComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,PropertyWrapper.DefaultValueCategory.Stat,PropertyWrapper.DefaultValueCategory.Effects,PropertyWrapper.DefaultValueCategory.PlayerSkills,PropertyWrapper.DefaultValueCategory.QDamage,PropertyWrapper.DefaultValueCategory.EDamage,PropertyWrapper.DefaultValueCategory.ItemInPlayer,PropertyWrapper.DefaultValueCategory.Combo,
+SceneComponent=
 
 [EditorStartup]
 LastLevel=/Game/DragonWord/MAP/LevelOne
@@ -1540,7 +1540,7 @@ K2Node_InputDebugKey.Modifier=True
 WB_BloodFx_C.Layout=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/DragonWord/Player/BP_WizardPlayer.BP_WizardPlayer
 OpenAssetsAtExit=/Game/DragonWord/Player/Components/SYS_PlayerStat.SYS_PlayerStat
 OpenAssetsAtExit=/Game/DragonWord/FX/DashFX.DashFX
@@ -1581,7 +1581,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.748840034
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/DragonWord/Enemies/Component
+ContentBrowserTab1.SelectedPaths=/Game/DragonWord/HUD
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2750,7 +2750,7 @@ GameMapsSettings=True
 /Game/DragonWord/Component/SYS_StageStat.SYS_StageStat=0
 /Game/DragonWord/Player/Components/SYS_PlayerStat.SYS_PlayerStat=0
 /Game/DragonWord/Component/STRUCT_Item.STRUCT_Item=1
-/Game/DragonWord/HUD/HUD_GamePlay.HUD_GamePlay=1
+/Game/DragonWord/HUD/HUD_GamePlay.HUD_GamePlay=0
 /Game/DragonWord/HUD/WB_DamageNumber.WB_DamageNumber=0
 /Game/DragonWord/HUD/WB_BloodFx.WB_BloodFx=0
 /Game/DragonWord/Player/Animation/AM_HitReact.AM_HitReact=0
