base button text

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -162,7 +162,7 @@ LastLevel=/Game/DragonWord/MAP/LevelOne
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.Brush\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -277,15 +277,24 @@ ProceduralShapeToolProperties="\"Object\" "
 NewMeshMaterialProperties="\"Object\" "
 MainMenu_WB_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.Brush\" "
+Visual="\"Object\" \"Object.Appearance.Brush\" "
 CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" "
+PanelWidget="\"Object\" "
 TextBlock="\"Object\" "
 TextLayoutWidget="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
-Button="\"Object\" \"Object.Appearance.WidgetStyle\" "
-ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
+ContentWidget="\"Object\" "
+BaseBtn_WB_C="\"Object\" "
+K2Node_MakeStruct="\"Object\" "
+K2Node_StructMemberSet="\"Object\" "
+K2Node_StructOperation="\"Object\" "
+K2Node_Variable="\"Object\" "
+K2Node="\"Object\" "
+EdGraphNode="\"Object\" "
+Border="\"Object\" "
+EdGraphNode_Comment="\"Object\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -707,11 +716,43 @@ Widget.Localization=True
 PropertyWrapper.Events=True
 PropertyWrapper.DefaultValueCategory=True
 PropertyWrapper.Variable=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_MakeStruct.PinOptions=True
+BaseBtn_WB_C.Default=True
+BaseBtn_WB_C.Appearance=True
+BaseBtn_WB_C.Designer=True
+BaseBtn_WB_C.Input=True
+BaseBtn_WB_C.Interaction=True
+BaseBtn_WB_C.Performance=True
+BaseBtn_WB_C.Layout=True
+BaseBtn_WB_C.Behavior=True
+BaseBtn_WB_C.Render Transform=True
+BaseBtn_WB_C.Localization=True
+BaseBtn_WB_C.Accessibility=True
+BaseBtn_WB_C.Clipping=True
+BaseBtn_WB_C.Navigation=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/UI/MainMenu_WB.MainMenu_WB
-OpenAssetsAtExit=/Game/DragonWord/MAP/LevelOne.LevelOne:PersistentLevel.LevelOne
+OpenAssetsAtExit=/Game/UI/StageMap_WB.StageMap_WB
+OpenAssetsAtExit=/Game/UI/BaseBtn_WB.BaseBtn_WB
 
 [RootWindow]
 ScreenPosition=X=-1544.000 Y=113.000
@@ -768,7 +809,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/UI/images
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1805,8 +1846,10 @@ MRUItem1=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
 MRUItem0=/Game/UI/MainMenu_WB
-MRUItem1=/Game/DragonWord/MAP/LevelOne
-MRUItem2=/Game/DragonWord/MAP/TestMap
+MRUItem1=/Game/UI/BaseBtn_WB
+MRUItem2=/Game/UI/StageMap_WB
+MRUItem3=/Game/DragonWord/MAP/LevelOne
+MRUItem4=/Game/DragonWord/MAP/TestMap
 
 [LandscapeEdit]
 PaintToolStrength=0.300000012
@@ -1916,4 +1959,55 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
+
+[DetailCategoriesAdvanced]
+PropertyWrapper.Variable=False
+
+[AssetEditorToolkitTabLocation]
+/Game/UI/MainMenu_WB.MainMenu_WB=1
+/Game/DragonWord/MAP/LevelOne.LevelOne:PersistentLevel.LevelOne=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bEnableInputTriggerSupportWarnings=False
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=True
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
