--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -162,7 +162,7 @@ LastLevel=/Game/DragonWord/MAP/LevelOne
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Appearance.Brush\" "
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -277,14 +277,14 @@ ProceduralShapeToolProperties="\"Object\" "
 NewMeshMaterialProperties="\"Object\" "
 MainMenu_WB_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.Brush\" "
-Visual="\"Object\" \"Object.Appearance.Brush\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-TextBlock="\"Object\" "
-TextLayoutWidget="\"Object\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
-Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
 ContentWidget="\"Object\" "
 BaseBtn_WB_C="\"Object\" "
 K2Node_MakeStruct="\"Object\" "
@@ -295,6 +295,13 @@ K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
 Border="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
+Slider="\"Object\" "
+RichTextBlock="\"Object\" "
+MultiLineEditableTextBox="\"Object\" "
+EditableTextBox="\"Object\" "
+ListView="\"Object\" "
+ListViewBase="\"Object\" "
+VocabSetting_WB_C="\"Object\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -747,12 +754,87 @@ MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+BaseBtn_WB_C.Events=True
+Border.Layout=True
+Slider.Layout=True
+Slider.Appearance=True
+Slider.Style=True
+Slider.Accessibility=True
+Slider.Interaction=True
+Slider.Behavior=True
+Slider.Render Transform=True
+Slider.Performance=True
+Slider.Clipping=True
+Slider.Navigation=True
+Slider.Localization=True
+Slider.Events=True
+RichTextBlock.Layout=True
+RichTextBlock.Content=True
+RichTextBlock.Appearance=True
+RichTextBlock.Accessibility=True
+RichTextBlock.Clipping=True
+RichTextBlock.Wrapping=True
+RichTextBlock.Behavior=True
+RichTextBlock.Render Transform=True
+RichTextBlock.Performance=True
+RichTextBlock.Navigation=True
+RichTextBlock.Localization=True
+MultiLineEditableTextBox.Layout=True
+MultiLineEditableTextBox.Content=True
+MultiLineEditableTextBox.Style=True
+MultiLineEditableTextBox.Accessibility=True
+MultiLineEditableTextBox.Appearance=True
+MultiLineEditableTextBox.Behavior=True
+MultiLineEditableTextBox.Wrapping=True
+MultiLineEditableTextBox.Render Transform=True
+MultiLineEditableTextBox.Performance=True
+MultiLineEditableTextBox.Clipping=True
+MultiLineEditableTextBox.Navigation=True
+MultiLineEditableTextBox.Localization=True
+MultiLineEditableTextBox.Events=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Appearance=True
+EditableTextBox.Accessibility=True
+EditableTextBox.Behavior=True
+EditableTextBox.Clipping=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Performance=True
+EditableTextBox.Navigation=True
+EditableTextBox.Localization=True
+EditableTextBox.Events=True
+ListView.Layout=True
+ListView.ListView=True
+ListView.Scrolling=True
+ListView.Accessibility=True
+ListView.Input=True
+ListView.ListEntries=True
+ListView.Behavior=True
+ListView.Render Transform=True
+ListView.Performance=True
+ListView.Clipping=True
+ListView.Navigation=True
+ListView.Localization=True
+ListView.Events=True
+VocabSetting_WB_C.Appearance=True
+VocabSetting_WB_C.Designer=True
+VocabSetting_WB_C.Accessibility=True
+VocabSetting_WB_C.Input=True
+VocabSetting_WB_C.Interaction=True
+VocabSetting_WB_C.Performance=True
+VocabSetting_WB_C.Behavior=True
+VocabSetting_WB_C.Render Transform=True
+VocabSetting_WB_C.Clipping=True
+VocabSetting_WB_C.Navigation=True
+VocabSetting_WB_C.Localization=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/UI/MainMenu_WB.MainMenu_WB
+OpenAssetsAtExit=/Game/UI/VocabSetting_WB.VocabSetting_WB
 OpenAssetsAtExit=/Game/UI/StageMap_WB.StageMap_WB
 OpenAssetsAtExit=/Game/UI/BaseBtn_WB.BaseBtn_WB
+OpenAssetsAtExit=/Game/UI/Add_Vocab_WB.Add_Vocab_WB
+OpenAssetsAtExit=/Game/UI/Remove_Vocab_WB.Remove_Vocab_WB
 
 [RootWindow]
 ScreenPosition=X=-1544.000 Y=113.000
@@ -809,7 +891,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI/images
+ContentBrowserDrawer.SelectedPaths=/Game/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1845,11 +1927,14 @@ MRUItem0=/Game/DragonWord/MAP/LevelOne
 MRUItem1=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/MainMenu_WB
-MRUItem1=/Game/UI/BaseBtn_WB
-MRUItem2=/Game/UI/StageMap_WB
-MRUItem3=/Game/DragonWord/MAP/LevelOne
-MRUItem4=/Game/DragonWord/MAP/TestMap
+MRUItem0=/Game/UI/Remove_Vocab_WB
+MRUItem1=/Game/UI/Add_Vocab_WB
+MRUItem2=/Game/UI/BaseBtn_WB
+MRUItem3=/Game/UI/VocabSetting_WB
+MRUItem4=/Game/UI/StageMap_WB
+MRUItem5=/Game/UI/MainMenu_WB
+MRUItem6=/Game/DragonWord/MAP/LevelOne
+MRUItem7=/Game/DragonWord/MAP/TestMap
 
 [LandscapeEdit]
 PaintToolStrength=0.300000012
@@ -1888,8 +1973,8 @@ Panel=False
 Primitive=False
 Special Effects=False
 Synth=False
-User Created=False
-Advanced=False
+User Created=True
+Advanced=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1962,10 +2047,12 @@ TreeViewWidth=0.300000
 
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=False
+Slider.Appearance=True
 
 [AssetEditorToolkitTabLocation]
 /Game/UI/MainMenu_WB.MainMenu_WB=1
 /Game/DragonWord/MAP/LevelOne.LevelOne:PersistentLevel.LevelOne=1
+/Game/UI/StageMap_WB.StageMap_WB=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
