Fixed the wheel trap

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -168,7 +168,7 @@ None=======
 SkeletalMeshComponent=
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.ComboStruct,
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,
-SceneComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,
+SceneComponent=
 Landscape=PropertyWrapper.DefaultValueCategory.ComboStruct,
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.ComboStruct,
 Info=PropertyWrapper.DefaultValueCategory.ComboStruct,
@@ -186,7 +186,7 @@ PlatformWood_C=PropertyWrapper.DefaultValueCategory.ComboStruct,
 BillboardComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,
 PlatformWoodLnR_C=PropertyWrapper.DefaultValueCategory.ComboStruct,
 PlatformBrickLnR_C=PropertyWrapper.DefaultValueCategory.ComboStruct,
-WheelTrap_C=PropertyWrapper.DefaultValueCategory.ComboStruct,
+WheelTrap_C=
 RotatingMovementComponent=PropertyWrapper.DefaultValueCategory.ComboStruct,
 Wheel_C=PropertyWrapper.DefaultValueCategory.ComboStruct,
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.ComboStruct,
@@ -432,8 +432,8 @@ EdGraphNode_Comment="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 BillboardComponent="\"Object\" "
-InterpToMovementComponent="\"Object\" \"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
-MovementComponent="\"Object\" \"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
+InterpToMovementComponent="\"Object\" \"Object.Control.ControlPoints\" "
+MovementComponent="\"Object\" \"Object.Control.ControlPoints\" "
 RotatingMovementComponent="\"Object\" "
 
 [DetailCategories]
@@ -1643,17 +1643,14 @@ FinalGateLV1_C.Networking=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/DragonWord/BPObjects/PlatformWoodLnR.PlatformWoodLnR
-OpenAssetsAtExit=/Game/DragonWord/BPObjects/PlatformBrickLnR.PlatformBrickLnR
-OpenAssetsAtExit=/Game/DragonWord/BPObjects/Wheel.Wheel
 OpenAssetsAtExit=/Game/DragonWord/BPObjects/WheelTrap.WheelTrap
-OpenAssetsAtExit=/Game/DragonWord/BPObjects/Wheel2.Wheel2
 OpenAssetsAtExit=/Game/DragonWord/BPObjects/FinalGateLV1.FinalGateLV1
 
 [RootWindow]
 ScreenPosition=X=853.000 Y=161.000
-ScreenPosition=X=-1544.000 Y=113.000
+ScreenPosition=X=124.800 Y=44.800
 WindowSize=X=1701.000 Y=720.000
-WindowSize=X=1280.000 Y=720.000
+WindowSize=X=1281.600 Y=721.600
 InitiallyMaximized=False
 InitiallyMaximized=True
 None=======
@@ -2824,26 +2821,26 @@ MRUItem0=/Game/DragonWord/MAP/LevelOne
 MRUItem1=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/DragonWord/BPObjects/FinalGateLV1
-MRUItem1=/Game/DragonWord/BPObjects/Bridge
+MRUItem0=/Game/DragonWord/MeshesForBP/CartWithHay
+MRUItem1=/Game/DragonWord/BPObjects/FinalGateLV1
 MRUItem2=/Game/DragonWord/BPObjects/Wheel2
 MRUItem3=/Game/DragonWord/BPObjects/WheelTrap
 MRUItem4=/Game/DragonWord/BPObjects/Wheel
-MRUItem5=/Game/DragonWord/MeshesForBP/WheelTrap
-MRUItem6=/Game/DragonWord/BPObjects/PlatformBrickLnR
-MRUItem7=/Game/DragonWord/BPObjects/PlatformWoodLnR
-MRUItem8=/Game/Fantastic_Village_Pack/blueprints/buildings/BP_BLD_house_14
-MRUItem9=/Game/Fantastic_Village_Pack/blueprints/props/BP_PROP_cart_03
-MRUItem10=/Game/DragonWord/Objects/PlatformBrickLnR
-MRUItem11=/Game/DragonWord/Objects/PlatformBrick
-MRUItem12=/Game/DragonWord/Meshes/PlatformWood
-MRUItem13=/Game/DragonWord/Objects/Platform
-MRUItem14=/Game/DragonWord/InputSystem/IM_Input
-MRUItem15=/Game/DragonWord/InputSystem/IA_Attack
-MRUItem16=/Game/DragonWord/InputSystem/IA_WASD
-MRUItem17=/Game/DragonWord/Player/Animation/ABP_WizardPlayer
-MRUItem18=/Game/BattleWizardPolyart/CharacterBP/WizardSM_BP
-MRUItem19=/Game/DragonWord/Player/BP_WizardPlayer
+MRUItem5=/Game/DragonWord/BPObjects/PlatformBrickLnR
+MRUItem6=/Game/DragonWord/BPObjects/PlatformWoodLnR
+MRUItem7=/Game/DragonWord/BPObjects/Bridge
+MRUItem8=/Game/DragonWord/MeshesForBP/WheelTrap
+MRUItem9=/Game/Fantastic_Village_Pack/blueprints/buildings/BP_BLD_house_14
+MRUItem10=/Game/Fantastic_Village_Pack/blueprints/props/BP_PROP_cart_03
+MRUItem11=/Game/DragonWord/Objects/PlatformBrickLnR
+MRUItem12=/Game/DragonWord/Objects/PlatformBrick
+MRUItem13=/Game/DragonWord/Meshes/PlatformWood
+MRUItem14=/Game/DragonWord/Objects/Platform
+MRUItem15=/Game/DragonWord/InputSystem/IM_Input
+MRUItem16=/Game/DragonWord/InputSystem/IA_Attack
+MRUItem17=/Game/DragonWord/InputSystem/IA_WASD
+MRUItem18=/Game/DragonWord/Player/Animation/ABP_WizardPlayer
+MRUItem19=/Game/BattleWizardPolyart/CharacterBP/WizardSM_BP
 
 [LandscapeEdit]
 PaintToolStrength=0.300000012
@@ -2921,6 +2918,7 @@ GameMapsSettings=True
 /Game/DragonWord/BPObjects/Bridge.Bridge=0
 /Game/DragonWord/BPObjects/Wheel2.Wheel2=0
 /Game/DragonWord/BPObjects/FinalGateLV1.FinalGateLV1=0
+/Game/DragonWord/MeshesForBP/CartWithHay.CartWithHay=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3074,18 +3072,17 @@ Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/DragonWord/BPObjects/WheelTrap.WheelTrap;
+RecentlyPlaced=/Game/DragonWord/MeshesForBP/CartWithHay.CartWithHay;
+RecentlyPlaced=/Game/DragonWord/BPObjects/PlatformBrickLnR.PlatformBrickLnR;
+RecentlyPlaced=/Game/DragonWord/MeshesForBP/CartEmpty.CartEmpty;
 RecentlyPlaced=/Game/DragonWord/BPObjects/FinalGateLV1.FinalGateLV1;
 RecentlyPlaced=/Game/DragonWord/BPObjects/Bridge.Bridge;
-RecentlyPlaced=/Game/DragonWord/BPObjects/Wheel2.Wheel2;
-RecentlyPlaced=/Game/DragonWord/BPObjects/WheelTrap.WheelTrap;
 RecentlyPlaced=/Game/DragonWord/BPObjects/Wheel.Wheel;
 RecentlyPlaced=/Game/DragonWord/MeshesForBP/WheelTrap.WheelTrap;
 RecentlyPlaced=/Game/DragonWord/BPObjects/PlatformWoodLnR.PlatformWoodLnR;
-RecentlyPlaced=/Game/DragonWord/BPObjects/PlatformBrickLnR.PlatformBrickLnR;
 RecentlyPlaced=/Game/DragonWord/MeshesForBP/BaseLV1.BaseLV1;
 RecentlyPlaced=/Game/DragonWord/MeshesForBP/PlatformWood.PlatformWood;
-RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/vehicles/SM_PROP_cart_03.SM_PROP_cart_03;
-RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/vehicles/SM_PROP_cart_02.SM_PROP_cart_02;
 RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/vehicles/SM_PROP_cart_wheel_big.SM_PROP_cart_wheel_big;
 RecentlyPlaced=/Game/Fantastic_Village_Pack/meshes/props/vehicles/SM_PROP_cart_wheel_small_R.SM_PROP_cart_wheel_small_R;
 RecentlyPlaced=/Game/Fantastic_Village_Pack/blueprints/props/BP_PROP_fence_gate.BP_PROP_fence_gate;
