--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -280,12 +280,12 @@ UserWidget="\"Object\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
 CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
-Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
-ContentWidget="\"Object\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
 BaseBtn_WB_C="\"Object\" "
 K2Node_MakeStruct="\"Object\" "
 K2Node_StructMemberSet="\"Object\" "
@@ -302,6 +302,8 @@ EditableTextBox="\"Object\" "
 ListView="\"Object\" "
 ListViewBase="\"Object\" "
 VocabSetting_WB_C="\"Object\" "
+StageMap_WB_C="\"Object\" "
+Lose_WB_C="\"Object\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -830,11 +832,10 @@ VocabSetting_WB_C.Localization=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/UI/VocabSetting_WB.VocabSetting_WB
+OpenAssetsAtExit=/Game/UI/MainMenu_WB.MainMenu_WB
 OpenAssetsAtExit=/Game/UI/StageMap_WB.StageMap_WB
-OpenAssetsAtExit=/Game/UI/BaseBtn_WB.BaseBtn_WB
-OpenAssetsAtExit=/Game/UI/Add_Vocab_WB.Add_Vocab_WB
-OpenAssetsAtExit=/Game/UI/Remove_Vocab_WB.Remove_Vocab_WB
+OpenAssetsAtExit=/Game/UI/Win_WB.Win_WB
+OpenAssetsAtExit=/Game/UI/Lose_WB.Lose_WB
 
 [RootWindow]
 ScreenPosition=X=-1544.000 Y=113.000
@@ -867,7 +868,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/DragonWord/MAP
+ContentBrowserTab1.SelectedPaths=/Game/UI/images
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1927,14 +1928,16 @@ MRUItem0=/Game/DragonWord/MAP/LevelOne
 MRUItem1=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/Remove_Vocab_WB
-MRUItem1=/Game/UI/Add_Vocab_WB
-MRUItem2=/Game/UI/BaseBtn_WB
-MRUItem3=/Game/UI/VocabSetting_WB
-MRUItem4=/Game/UI/StageMap_WB
-MRUItem5=/Game/UI/MainMenu_WB
-MRUItem6=/Game/DragonWord/MAP/LevelOne
-MRUItem7=/Game/DragonWord/MAP/TestMap
+MRUItem0=/Game/UI/Lose_WB
+MRUItem1=/Game/UI/MainMenu_WB
+MRUItem2=/Game/UI/Add_Vocab_WB
+MRUItem3=/Game/UI/StageMap_WB
+MRUItem4=/Game/UI/Win_WB
+MRUItem5=/Game/UI/Remove_Vocab_WB
+MRUItem6=/Game/UI/BaseBtn_WB
+MRUItem7=/Game/UI/VocabSetting_WB
+MRUItem8=/Game/DragonWord/MAP/LevelOne
+MRUItem9=/Game/DragonWord/MAP/TestMap
 
 [LandscapeEdit]
 PaintToolStrength=0.300000012
@@ -1965,7 +1968,7 @@ GameplayTagsSettings=True
 [WidgetTemplatesExpanded]
 Audio=False
 Editor=False
-Input=False
+Input=True
 Lists=False
 Misc=False
 Optimization=False
@@ -2053,6 +2056,10 @@ Slider.Appearance=True
 /Game/UI/MainMenu_WB.MainMenu_WB=1
 /Game/DragonWord/MAP/LevelOne.LevelOne:PersistentLevel.LevelOne=1
 /Game/UI/StageMap_WB.StageMap_WB=1
+/Game/UI/VocabSetting_WB.VocabSetting_WB=1
+/Game/UI/BaseBtn_WB.BaseBtn_WB=1
+/Game/UI/Add_Vocab_WB.Add_Vocab_WB=1
+/Game/UI/Remove_Vocab_WB.Remove_Vocab_WB=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
