--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -280,7 +280,7 @@ UserWidget="\"Object\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
 CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
+PanelWidget="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
@@ -304,6 +304,16 @@ ListViewBase="\"Object\" "
 VocabSetting_WB_C="\"Object\" "
 StageMap_WB_C="\"Object\" "
 Lose_WB_C="\"Object\" "
+Pause_WB_C="\"Object\" "
+RadialSlider="\"Object\" "
+MenuAnchor="\"Object\" "
+Spacer="\"Object\" "
+Throbber="\"Object\" "
+Setting_WB_C="\"Object\" "
+BackgroundBlur="\"Object\" "
+AudioSlider="\"Object\" "
+AudioSliderBase="\"Object\" "
+AudioVolumeSlider="\"Object\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -829,13 +839,122 @@ VocabSetting_WB_C.Render Transform=True
 VocabSetting_WB_C.Clipping=True
 VocabSetting_WB_C.Navigation=True
 VocabSetting_WB_C.Localization=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+StageMap_WB_C.Appearance=True
+StageMap_WB_C.Designer=True
+StageMap_WB_C.Input=True
+StageMap_WB_C.Interaction=True
+StageMap_WB_C.Performance=True
+StageMap_WB_C.Layout=True
+StageMap_WB_C.Behavior=True
+StageMap_WB_C.Render Transform=True
+StageMap_WB_C.Localization=True
+StageMap_WB_C.Accessibility=True
+StageMap_WB_C.Clipping=True
+StageMap_WB_C.Navigation=True
+Pause_WB_C.Appearance=True
+Pause_WB_C.Designer=True
+Pause_WB_C.Accessibility=True
+Pause_WB_C.Input=True
+Pause_WB_C.Interaction=True
+Pause_WB_C.Performance=True
+Pause_WB_C.Behavior=True
+Pause_WB_C.Render Transform=True
+Pause_WB_C.Clipping=True
+Pause_WB_C.Navigation=True
+Pause_WB_C.Localization=True
+RadialSlider.Layout=True
+RadialSlider.Appearance=True
+RadialSlider.Style=True
+RadialSlider.Accessibility=True
+RadialSlider.Interaction=True
+RadialSlider.Behavior=True
+RadialSlider.Render Transform=True
+RadialSlider.Performance=True
+RadialSlider.Clipping=True
+RadialSlider.Navigation=True
+RadialSlider.Localization=True
+RadialSlider.Events=True
+MenuAnchor.Layout=True
+MenuAnchor.Menu Anchor=True
+MenuAnchor.Accessibility=True
+MenuAnchor.Behavior=True
+MenuAnchor.Render Transform=True
+MenuAnchor.Performance=True
+MenuAnchor.Clipping=True
+MenuAnchor.Navigation=True
+MenuAnchor.Localization=True
+MenuAnchor.Events=True
+Spacer.Layout=True
+Spacer.Appearance=True
+Spacer.Accessibility=True
+Spacer.Behavior=True
+Spacer.Render Transform=True
+Spacer.Performance=True
+Spacer.Clipping=True
+Spacer.Navigation=True
+Spacer.Localization=True
+Throbber.Layout=True
+Throbber.Appearance=True
+Throbber.Accessibility=True
+Throbber.Behavior=True
+Throbber.Render Transform=True
+Throbber.Performance=True
+Throbber.Clipping=True
+Throbber.Navigation=True
+Throbber.Localization=True
+Setting_WB_C.Appearance=True
+Setting_WB_C.Designer=True
+Setting_WB_C.Input=True
+Setting_WB_C.Interaction=True
+Setting_WB_C.Performance=True
+Setting_WB_C.Layout=True
+Setting_WB_C.Behavior=True
+Setting_WB_C.Render Transform=True
+Setting_WB_C.Localization=True
+Setting_WB_C.Accessibility=True
+Setting_WB_C.Clipping=True
+Setting_WB_C.Navigation=True
+Pause_WB_C.Layout=True
+BackgroundBlur.Layout=True
+BackgroundBlur.Content=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Accessibility=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Clipping=True
+BackgroundBlur.Navigation=True
+BackgroundBlur.Localization=True
+AudioSlider.Layout=True
+AudioSlider.Behavior=True
+AudioSlider.Appearance=True
+AudioSlider.Accessibility=True
+AudioSlider.Render Transform=True
+AudioSlider.Performance=True
+AudioSlider.Clipping=True
+AudioSlider.Navigation=True
+AudioSlider.Localization=True
+AudioSlider.Events=True
+AudioVolumeSlider.Layout=True
+AudioVolumeSlider.Behavior=True
+AudioVolumeSlider.Appearance=True
+AudioVolumeSlider.Accessibility=True
+AudioVolumeSlider.Render Transform=True
+AudioVolumeSlider.Performance=True
+AudioVolumeSlider.Clipping=True
+AudioVolumeSlider.Navigation=True
+AudioVolumeSlider.Localization=True
+AudioVolumeSlider.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/UI/Pause_WB.Pause_WB
 OpenAssetsAtExit=/Game/UI/MainMenu_WB.MainMenu_WB
 OpenAssetsAtExit=/Game/UI/StageMap_WB.StageMap_WB
 OpenAssetsAtExit=/Game/UI/Win_WB.Win_WB
-OpenAssetsAtExit=/Game/UI/Lose_WB.Lose_WB
 
 [RootWindow]
 ScreenPosition=X=-1544.000 Y=113.000
@@ -1928,16 +2047,18 @@ MRUItem0=/Game/DragonWord/MAP/LevelOne
 MRUItem1=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/Lose_WB
-MRUItem1=/Game/UI/MainMenu_WB
-MRUItem2=/Game/UI/Add_Vocab_WB
-MRUItem3=/Game/UI/StageMap_WB
-MRUItem4=/Game/UI/Win_WB
-MRUItem5=/Game/UI/Remove_Vocab_WB
-MRUItem6=/Game/UI/BaseBtn_WB
-MRUItem7=/Game/UI/VocabSetting_WB
-MRUItem8=/Game/DragonWord/MAP/LevelOne
-MRUItem9=/Game/DragonWord/MAP/TestMap
+MRUItem0=/Game/UI/Setting_WB
+MRUItem1=/Game/UI/Pause_WB
+MRUItem2=/Game/UI/Lose_WB
+MRUItem3=/Game/UI/MainMenu_WB
+MRUItem4=/Game/UI/Add_Vocab_WB
+MRUItem5=/Game/UI/StageMap_WB
+MRUItem6=/Game/UI/Win_WB
+MRUItem7=/Game/UI/Remove_Vocab_WB
+MRUItem8=/Game/UI/BaseBtn_WB
+MRUItem9=/Game/UI/VocabSetting_WB
+MRUItem10=/Game/DragonWord/MAP/LevelOne
+MRUItem11=/Game/DragonWord/MAP/TestMap
 
 [LandscapeEdit]
 PaintToolStrength=0.300000012
@@ -1968,7 +2089,7 @@ GameplayTagsSettings=True
 [WidgetTemplatesExpanded]
 Audio=False
 Editor=False
-Input=True
+Input=False
 Lists=False
 Misc=False
 Optimization=False
@@ -2060,6 +2181,7 @@ Slider.Appearance=True
 /Game/UI/BaseBtn_WB.BaseBtn_WB=1
 /Game/UI/Add_Vocab_WB.Add_Vocab_WB=1
 /Game/UI/Remove_Vocab_WB.Remove_Vocab_WB=1
+/Game/UI/Lose_WB.Lose_WB=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
