--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -162,7 +162,7 @@ LastLevel=/Game/DragonWord/MAP/LevelOne
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.Brush\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -277,8 +277,8 @@ ProceduralShapeToolProperties="\"Object\" "
 NewMeshMaterialProperties="\"Object\" "
 MainMenu_WB_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.Brush\" "
+Visual="\"Object\" \"Object.Appearance.Brush\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" "
@@ -951,10 +951,11 @@ AudioVolumeSlider.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/UI/Pause_WB.Pause_WB
+OpenAssetsAtExit=/Game/UI/Instruction_WB.Instruction_WB
 OpenAssetsAtExit=/Game/UI/MainMenu_WB.MainMenu_WB
 OpenAssetsAtExit=/Game/UI/StageMap_WB.StageMap_WB
 OpenAssetsAtExit=/Game/UI/Win_WB.Win_WB
+OpenAssetsAtExit=/Game/UI/Setting_WB.Setting_WB
 
 [RootWindow]
 ScreenPosition=X=-1544.000 Y=113.000
@@ -1011,7 +1012,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI
+ContentBrowserDrawer.SelectedPaths=/Game/UI/assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2047,18 +2048,19 @@ MRUItem0=/Game/DragonWord/MAP/LevelOne
 MRUItem1=/Game/DragonWord/MAP/TestMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/Setting_WB
-MRUItem1=/Game/UI/Pause_WB
-MRUItem2=/Game/UI/Lose_WB
-MRUItem3=/Game/UI/MainMenu_WB
-MRUItem4=/Game/UI/Add_Vocab_WB
-MRUItem5=/Game/UI/StageMap_WB
-MRUItem6=/Game/UI/Win_WB
-MRUItem7=/Game/UI/Remove_Vocab_WB
-MRUItem8=/Game/UI/BaseBtn_WB
-MRUItem9=/Game/UI/VocabSetting_WB
-MRUItem10=/Game/DragonWord/MAP/LevelOne
-MRUItem11=/Game/DragonWord/MAP/TestMap
+MRUItem0=/Game/UI/Instruction_WB
+MRUItem1=/Game/UI/Setting_WB
+MRUItem2=/Game/UI/Pause_WB
+MRUItem3=/Game/UI/Lose_WB
+MRUItem4=/Game/UI/MainMenu_WB
+MRUItem5=/Game/UI/Add_Vocab_WB
+MRUItem6=/Game/UI/StageMap_WB
+MRUItem7=/Game/UI/Win_WB
+MRUItem8=/Game/UI/Remove_Vocab_WB
+MRUItem9=/Game/UI/BaseBtn_WB
+MRUItem10=/Game/UI/VocabSetting_WB
+MRUItem11=/Game/DragonWord/MAP/LevelOne
+MRUItem12=/Game/DragonWord/MAP/TestMap
 
 [LandscapeEdit]
 PaintToolStrength=0.300000012
@@ -2095,9 +2097,9 @@ Misc=False
 Optimization=False
 Panel=False
 Primitive=False
-Special Effects=False
+Special Effects=True
 Synth=False
-User Created=True
+User Created=False
 Advanced=True
 
 [UMGEditor.Designer]
@@ -2182,6 +2184,7 @@ Slider.Appearance=True
 /Game/UI/Add_Vocab_WB.Add_Vocab_WB=1
 /Game/UI/Remove_Vocab_WB.Remove_Vocab_WB=1
 /Game/UI/Lose_WB.Lose_WB=1
+/Game/UI/Pause_WB.Pause_WB=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
