Added interaction and collectables with doors

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,7 +2,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=457AA171446BA387792AC8BB818DE2DD
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "F8D1EF754297601FA151C1862253D5A5", "DragonWordZ")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
